--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 				<div class="header-category">
 					<h2 class="withWave">Рубрики</h2>
 					<div class="category">
-						<div class="row clearfix">
-						
+							<div class="row">
 								<div class="categoryWrapper">
 									<div class="row">
 										<div class="category_image leftArrow float-left">
@@ -122,7 +121,7 @@
 											</div>
 										</div>
 										<div class="categoryDescription float-left">
-											<h3>lorem ipsum dolor sit<br> amet, adipisicing elit.</h3>
+											<h3>рубрика 1</h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
 												<span class="of"><i>02</i></span>
@@ -130,7 +129,6 @@
 										</div>
 									</div>
 								</div>
-
 								<div class="categoryWrapper">
 									<div class="row">
 										<div class="category_image leftArrow float-left">
@@ -139,7 +137,7 @@
 											</div>
 										</div>
 										<div class="categoryDescription float-left">
-											<h3>lorem ipsum dolor sit<br> amet, adipisicing elit.</h3>
+											<h3>рубрика 2</h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
 												<span class="of"><i>02</i></span>
@@ -147,11 +145,12 @@
 										</div>
 									</div>
 								</div>
-
+							</div>
+							<div class="row">
 								<div class="categoryWrapper">
 									<div class="row">
 										<div class="categoryDescription float-left">
-											<h3>lorem ipsum dolor sit<br> amet, adipisicing elit.</h3>
+											<h3>рубрика 3</h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
 												<span class="of"><i>02</i></span>
@@ -163,12 +162,11 @@
 											</div>
 										</div>
 									</div>
-								</div>
-													
+								</div>			
 								<div class="categoryWrapper">
 									<div class="row">
 										<div class="categoryDescription float-left">
-											<h3>lorem ipsum dolor sit<br> amet, adipisicing elit.</h3>
+											<h3>рубрика 4</h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
 												<span class="of"><i>02</i></span>
@@ -181,7 +179,7 @@
 										</div>
 									</div>									
 								</div>
-						</div>
+							</div>
 					</div>
 				</div>
 			</div>
@@ -208,8 +206,7 @@
 								</div>
 							</div>
 							<div class="categoryDescription">
-								<span class="blue_text">tree</span>
-								<h3>lorem ipsum dolor sit<br> amet, adipisicing elit.</h3>
+								<h3>статья 1</h3>
 								<div class="categoryTextWrapper">
 									<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
 									<span class="of"><i>02</i></span>
@@ -219,15 +216,14 @@
 					</div>
 					<div class="col-md-6">
 						<div class="journal_image">
-							<div class="categoryDescription">
-								<span class="blue_text">tree</span>
-								<h3>lorem ipsum dolor sit<br> amet, adipisicing elit.</h3>
+							<div class="categoryDescription mobileInBottom">
+								<h3>статья 2</h3>
 								<div class="categoryTextWrapper">
 									<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
 									<span class="of"><i>02</i></span>
 								</div>
 							</div>
-							<div class="category_image topArrow">
+							<div class="category_image topArrow mobileInTop">
 								<div class="categoryIcon">
 									<img src="img/photo/plate_2.jpg" alt="">
 								</div>
