--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
 								<div class="mobile-menu-block hide">
 									<ul class="main">
-										<li class="item"><a href="index.html">Главная</a></li>
-										<li class="item"><a href="creator.html">Конструктор</a></li>
-										<li class="item"><a href="shop.html">Магазин</a></li>
-										<li class="item"><a href="#work">Инструкция</a></li>
-										<li class="item"><a href="#travel">О проекте</a></li>
+										<li class="item"><a href="index.html">рубрика 1</a></li>
+										<li class="item"><a href="creator.html">рубрика 2</a></li>
+										<li class="item"><a href="shop.html">рубрика 3</a></li>
+										<li class="item"><a href="#work">рубрика 4</a></li>
+										<li class="item"><a href="#travel">рубрика 5</a></li>
 									</ul>
 								</div>
 							</div>
