--- a/index.html
+++ b/index.html
@@ -124,10 +124,12 @@
 											</div>
 										</div>
 										<div class="categoryDescription float-left">
-											<h3>рубрика 1</h3>
+											<h3><span class="withWave">рубрика 1</span></h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
-												<span class="of"><i>02</i></span>
+											</div>
+											<div class="read left">
+												<a href="rubrica.html">читать</a>
 											</div>
 										</div>
 									</div>
@@ -140,10 +142,12 @@
 											</div>
 										</div>
 										<div class="categoryDescription float-left">
-											<h3>рубрика 2</h3>
+											<h3><span class="withWave">рубрика 2</span></h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
-												<span class="of"><i>02</i></span>
+											</div>
+											<div class="read left">
+												<a href="rubrica.html">читать</a>
 											</div>
 										</div>
 									</div>
@@ -153,10 +157,12 @@
 								<div class="categoryWrapper">
 									<div class="row">
 										<div class="categoryDescription float-left">
-											<h3>рубрика 3</h3>
+											<h3><span class="withWave">рубрика 3</span></h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
-												<span class="of"><i>02</i></span>
+											</div>
+											<div class="read rright">
+												<a href="rubrica.html">читать</a>
 											</div>
 										</div>
 										<div class="category_image rightArrow float-left">
@@ -169,10 +175,12 @@
 								<div class="categoryWrapper">
 									<div class="row">
 										<div class="categoryDescription float-left">
-											<h3>рубрика 4</h3>
+											<h3><span class="withWave">рубрика 4</span></h3>
 											<div class="categoryTextWrapper">
 												<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
-												<span class="of"><i>02</i></span>
+											</div>
+											<div class="read rright">
+												<a href="rubrica.html">читать</a>
 											</div>
 										</div>
 										<div class="category_image rightArrow float-left">
@@ -211,8 +219,7 @@
 							<div class="categoryDescription">
 								<h3>статья 1</h3>
 								<div class="categoryTextWrapper">
-									<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
-									<span class="of"><i>02</i></span>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, saepe iste nihil illum nesciunt nisi ab, quos quidem delectus temporibus molestiae, magni officia veritatis veniam in nemo labore facilis quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 								</div>
 							</div>
 						</div>
@@ -222,7 +229,7 @@
 							<div class="categoryDescription mobileInBottom">
 								<h3>статья 2</h3>
 								<div class="categoryTextWrapper">
-									<p>The way to a successful brand is hard, but always very interesting. Share the full story of your project – from the very first day until now.</p>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, saepe iste nihil illum nesciunt nisi ab, quos quidem delectus temporibus molestiae, magni officia veritatis veniam in nemo labore facilis quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 									<span class="of"><i>02</i></span>
 								</div>
 							</div>
