--- a/rubrica.html
+++ b/rubrica.html
@@ -127,6 +127,9 @@
 											<div class="categoryIcon">
 												<img src="img/photo/plate_2.jpg" alt="">
 											</div>
+											<div class="read">
+												<a href="textPage.html">читать</a>
+											</div>
 										</div>
 										<div class="categoryDescription">
 											<h3>статья 1</h3>
@@ -152,6 +155,9 @@
 											<div class="categoryIcon">
 												<img src="img/photo/plate_6.jpg" alt="">
 											</div>
+											<div class="read">
+												<a href="#">читать</a>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -162,6 +168,9 @@
 										<div class="category_image bottomArrow">
 											<div class="categoryIcon">
 												<img src="img/photo/plate_3.jpg" alt="">
+											</div>
+											<div class="read">
+												<a href="#">читать</a>
 											</div>
 										</div>
 										<div class="categoryDescription">
@@ -180,6 +189,9 @@
 										<div class="category_image bottomArrow tabInBottom">
 											<div class="categoryIcon">
 												<img src="img/photo/plate_7.jpg" alt="">
+											</div>
+											<div class="read">
+												<a href="#">читать</a>
 											</div>
 										</div>
 										<div class="categoryDescription tabInTop">
@@ -206,6 +218,9 @@
 											<div class="categoryIcon">
 												<img src="img/photo/plate_2.jpg" alt="">
 											</div>
+											<div class="read">
+												<a href="#">читать</a>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -216,6 +231,9 @@
 										<div class="category_image bottomArrow tabInBottom">
 											<div class="categoryIcon">
 												<img src="img/photo/plate_4.jpg" alt="">
+											</div>
+											<div class="read">
+												<a href="#">читать</a>
 											</div>
 										</div>
 										<div class="categoryDescription tabInTop">
@@ -234,6 +252,9 @@
 										<div class="category_image bottomArrow">
 											<div class="categoryIcon">
 												<img src="img/photo/plate_3.jpg" alt="">
+											</div>
+											<div class="read">
+												<a href="#">читать</a>
 											</div>
 										</div>
 										<div class="categoryDescription">
@@ -260,6 +281,9 @@
 											<div class="categoryIcon">
 												<img src="img/photo/plate_5.jpg" alt="">
 											</div>
+											<div class="read">
+												<a href="#">читать</a>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -270,6 +294,9 @@
 										<div class="category_image bottomArrow">
 											<div class="categoryIcon">
 												<img src="img/photo/plate_7.jpg" alt="">
+											</div>
+											<div class="read">
+												<a href="#">читать</a>
 											</div>
 										</div>
 										<div class="categoryDescription">
